@@ -3,7 +3,7 @@
   <groupId>net.sourceforge.mogwai</groupId>
   <artifactId>mogwai-erdesignerng</artifactId>
   <name>MogwaiERDesignerNG</name>
-  <version>1.4</version>
+  <version>1.5</version>
   <description>Mogwai ER-Designer is an entity relationship design tool.</description>
   <url>http://mogwai.sourceforge.net</url>
   <inceptionYear>2002</inceptionYear>
